feat(AP-07c): Mandanteneinstellungen (S-71), Owner übertragen, Protokoll (S-72), Anmeldesitzungen (S-73)
FA-BEN-09, FA-MAN-05, FA-ADM-03, FA-LOG-08, S-70…S-73; TK 5.3, 7.2.
